# search-engine-core

./: .cursorrules  .gitignore  .ninja_deps  .prettierrc.json  CMakeLists-linux.txt  CMakeLists.txt  DOCUMENTATION_CLEANUP.md  Dockerfile  Dockerfile.gumbo  Dockerfile.mongodb-server  Dockerfile.mongoserver  Dockerfile.test.mongo  Dockerfile.webserver  LICENSE  Makefile  README.md  README_SEARCH_CORE.md  README_STORAGE_TESTING.md  RETRY_SYSTEM_SUMMARY.md  ReadMe.txt  SearchEngineCore.rc  SearchEngineCore.sln  build-linux.sh  build.bat  build.sh  build_and_test.bat  build_and_test.sh  build_and_test_storage.bat  build_and_test_storage.ps1  build_and_test_storage_simple.bat  build_search_core.sh  cache-dependencies.bat  debug_redis  docker-compose.prod.yml  docker-compose.yml  index.html  linux_CMakeLists.txt  main.cpp  package-lock.json  package.json  (+14 more)
.github/workflows/: api-validation.yml  build-js-minifier.yml  build-mongodb-drivers.yml  build-search-engine.yml  ci-cd-pipeline.yml  docker-build-app.yml  docker-build-drivers.yml  docker-build-orchestrator.yml  docker-build-server.yml  docker-build.yml  main.yml  validate-api-docs.yml
SearchEngineCore/: .ninja_log  CMakeCache.txt  CMakeLists.txt  SearchEngineCore.aps  SearchEngineCore.vcxproj  SearchEngineCore.vcxproj.filters  build.ninja  cmake_install.cmake  httputility.cpp  httputility.h  infrastructure.cpp  main.cpp  mongodb.cpp  mongodb.h  resource.h  vcpkg.json
SearchEngineCore/include/: infrastructure.h  mongodb.h
SearchEngineCore/public/: index.html
SearchEngineCore/public/assets/css/: style.css
SearchEngineCore/src/: StaticFileHandler.cpp  api.cpp  httputility.cpp  main.cpp
binaries/: manual_test  minify_js_file  test_js_minifier
build-files/: CMakeLists.txt
cmake/linux/: CMakeLists.txt  build.sh
cmake/windows/: CMakeLists.txt  build.bat
config/: redis.json  scoring.json  test-minify-request.json
config/templates/: blog-site.json  corporate-site.json  documentation-site.json  ecommerce-site.json  forum-site.json  news-site.json  social-media.json
development/: preview-server.js  start-preview.sh
docker/: Dockerfile  Dockerfile.gumbo  Dockerfile.mongodb  Dockerfile.mongodb-server  docker-compose.prod.yml  docker-compose.yml
docs/: BULK_CRAWLING_GUIDE.md  DEPLOYMENT_CONFIGURATION.md  DOCKER_HEALTH_CHECK_BEST_PRACTICES.md  DOCUMENTATION_CLEANUP.md  DOCUMENTATION_ORGANIZATION_SUMMARY.md  JS_MINIFIER_CLIENT_CHANGELOG.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_OPTIMIZATIONS_SUMMARY.md  PRODUCTION_JS_MINIFICATION.md  README.md  SCORING_AND_RANKING.md  SPA_RENDERING.md  cmake-version-options.md  content-storage-layer.md  github_issue_bulk_crawling.md  lazy-connection-handling.md  manual-cache-bust.md
examples/: bulk_crawl_example.py  comprehensive-test.js  demo-file-methods.js  jquery.advanced.js  jquery.aggressive.js  jquery.basic.js  js_minification_example.cpp  sample_domains.csv  scoring_example.cpp  spa_crawler_example.cpp  test-js-sample.js  test-real-world.js  test-service.js
include/: BrowserlessClient.h  Logger.h  StaticFileHandler.h  api.h  httputility.h  mongodb.h  search_api.h  utils.h
js-minifier-service/: Dockerfile  enhanced-server.js  package-lock.json  package.json
locales/: de.json  en.json  es.json  fa.json  fr.json  languages.json  test-data.json
pages/: about.html  advanced.html  index.html  privacy.html  search.html
public/: about.html  advanced.html  coming-soon.html  crawl-request-test.html  crawl-request.html  crawl-tester.html  home.html  index.html  privacy.html  robots.txt  script.js  search.html  sponsor.css  sponsor.html  sponsor.js  styles.css
scripts/: build-docker.sh  build.sh  minify_js_file.sh  setup-js-minification.sh  setup-microservice.sh  start.sh  test_js_cache.sh  test_templates_endpoints.sh  validate-schema.js
src/: api.cpp  infrastructure.cpp  main.cpp  manual_js_file_test.cpp  mongodb.cpp  search_api.cpp  utils.cpp
src/common/: CMakeLists.txt  JsMinifier.cpp  JsMinifier.h  JsMinifierClient.cpp  JsMinifierClient.h  Logger.cpp  UrlSanitizer.cpp  logger_test.cpp
src/crawler/: BrowserlessClient.cpp  CMakeLists.txt  ContentParser.cpp  ContentParser.h  CrawlLogger.cpp  CrawlMetrics.cpp  CrawlMetrics.h  Crawler.cpp  Crawler.h  CrawlerManager.cpp  CrawlerManager.h  DomainManager.cpp  DomainManager.h  FailureClassifier.cpp  FailureClassifier.h  PageFetcher.cpp  PageFetcher.h  RobotsTxtParser.cpp  RobotsTxtParser.h  TemplateRegistry.cpp  URLFrontier.cpp  URLFrontier.h
src/crawler/models/: CrawlConfig.h  CrawlResult.h
src/job_queue/: CMakeLists.txt  JobQueue.cpp
src/scoring/: CMakeLists.txt  SearchScorer.cpp
src/search_core/: CMakeLists.txt  QueryParser.cpp  Scorer.cpp  SearchClient.cpp
src/storage/: CMakeLists.txt  ContentStorage.cpp  DomainStorage.cpp  EmailService.cpp  EmailService.h  MongoDBStorage.cpp  MongoDBStorage.h  RedisSearchStorage.cpp  SponsorStorage.cpp
templates/: base.inja  crawl-request-full.inja  crawl-request-simple.inja  crawl-request.inja  sponsor.inja
tests/: CMakeLists.txt  spa_test.html  test-all-methods.js  test-file-upload.html  test_js_minifier_file.sh  test_minified_jquery.html  test_sample.js  test_script.aggressive.js  test_script.basic.js  test_script.js  test_script.min.js  test_spa_detection.sh  test_websocket_retry_logs.html
tests/common/: CMakeLists.txt  TestJsMinifier.cpp  TestJsMinifierFile.cpp
tests/crawler/: CMakeLists.txt  content_parser_tests.cpp  crawler_tests.cpp  page_fetcher_tests.cpp  robots_txt_parser_tests.cpp  template_applier_tests.cpp  template_integration_tests.cpp  template_performance_tests.cpp  template_registry_tests.cpp  template_storage_tests.cpp  template_validator_tests.cpp  url_frontier_tests.cpp
tests/scoring/: CMakeLists.txt  test_search_scorer.cpp
tests/search_core/: CMakeLists.txt  TestExactSearchE2E.cpp  TestQueryParser.cpp  TestScorer.cpp  TestSearchClient.cpp
tests/storage/: CMakeLists.txt  debug_redis.cpp  test_content_storage.cpp  test_mongodb_storage.cpp  test_redis_search_storage.cpp
tests/webserver/: CMakeLists.txt  SearchEndpointTest.cpp  seed_test_data.sh
(+104 files in other folders)
